--- a/www/index.html
+++ b/www/index.html
@@ -20,29 +20,17 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/routes.js"></script>
+    <script src="js/controllers/task.controller.js"></script>
+    <script src="js/services/task.service.js"></script>
+
+
   </head>
   <body ng-app="starter">
-
-    <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Task</h1>
-      </ion-header-bar>
-      <ion-content>
-        <div ng-controller="mainCtrl">
-          {{mostrarMensagem()}}
-          <ion-list>
-            <li class="item item-toggle" ng-repeat="item in lista">
-              {{item.nome}}
-              <label class="toggle toggle-assertive">
-                <input type="checkbox" ng-model="item.pronto">
-                <div class="track">
-                  <div class="handle"></div>
-                </div>
-              </label>
-           </li>
-         </ion-list>
-        </div>
-      </ion-content>
-    </ion-pane>
+    <ion-nav-bar class="bar-assertive">
+      <ion-nav-back-button>
+      </ion-nav-back-button>
+    </ion-nav-bar>
+    <ion-nav-view name="content"></ion-nav-view>
   </body>
 </html>
